--- a/style.css
+++ b/style.css
@@ -61,11 +61,7 @@ body {
     color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
-#menu-icon{
-    font-size: 3.6rem;
-    color: var(--main-color);
-    display: none;
-}
+
 section{
     min-height: 100vh;
     padding: 10rem 12% 10rem;
@@ -349,100 +345,210 @@ span {
     background-color: var(--primary-background-color);
     width: 50px;
 }
-/* Services */
-.services{
+/* Experience */
+.experience{
     background: var(--primary-background-color);
     color: var(--text-color);
 }
-.services h2{
-    margin-bottom: 5rem;
+/* Adjustments to align icons and text properly */
+.details-containers {
+    display: flex;
+    flex-direction: column; /* Stack the title and articles vertically */
+    gap: 2rem; /* Add space between title and articles */
+    align-items: center; /* Align content to the left */
+    position: relative; /* To position the icon over the title */
+    background-color: var(--main-color);
+    border-radius: 2rem;
+    text-align: center;
+    border: 3px solid var(--main-color);
+    padding: 2rem;
+    width: 100%;
+}
+
+.experience-sub-title{
+    display: flex;
+    text-align: center;
+    font-size: 3rem;
+    font-weight: 600;
+    align-items: center; /* Vertically align icon and title */
+    gap: 1rem; /* Add space between the icon and text */
+    position: relative;
+}
+
+
+.experience-sub-title::before {
+    content: '';
+    display: inline-block;
+    width: 30px;
+    height: 30px;
+}
+
+.article-container {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column; /* Stack items in a column */
+    gap: 1rem; /* Add space between items */
+    align-items: flex-start; /* Align text to the left */
+}
+
+article {
+    display: flex;
+    align-items: center; /* Vertically align icon and text */
+    gap: 1rem; /* Space between icon and text */
+}
+
+article .icon {
+    width: 30px;
+    height: 30px;
+    flex-shrink: 0; /* Prevent icon from resizing */
+}
+
+.about-container{
+    gap: 4rem; /* Adjust this value to control the spacing between columns */
+    display: flex;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    justify-content: space-between; /* Ensures the columns are spaced equally */
+    
+}
+
+.experience-detail-container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;   
+}
+
+.article-container div h3{
+    font-size: 1.7rem;
+    color: var(--text-color);
+    margin-bottom: 1rem;
+}
+.article-container div p{
+    font-size: 1.5rem;
     color: var(--text-color);
 }
-.services-container{
-    display: grid;
-    grid-template-columns: repeat(2,1fr);
-    align-items: center;
-    gap: 2.5rem;
-}
-.service-box{
-    background-color: var(--main-color);
-    height: 300px;
-    border-radius: 3rem;
-    border: 5px solid transparent;
-    cursor: pointer;
-    transition: 0.4s ease-in-out;
-}
-.service-box:hover{
-    background: var(--text-color);
-    color: var(--primary-background-color);
-    border: 5px solid var(--main-color);
-    transform: scale(1.03);
-}
-.service-box .service-info{
+
+.experience-detail-container{
     display: flex;
+    justify-content: center;
     flex-direction: column;
-    text-align: left;
-    max-height: 200px;
-    justify-content: left;
-    align-items: baseline;
-    padding: 5rem 5rem;
 }
-.service-info h4{
-    font-size: 3rem;
-    color: var(--primary-background-color);
-    font-weight: 800;
-    line-height: 2;
+
+/* Projects */
+#projects {
+    position: relative;
 }
-.service-info p{
+.projects{
+    background-color: var(--secondary-background-color);
+    padding: 100px 0;
+    text-align: center;
+}
+.project-content{
+    background-color: var(--primary-background-color);
+    border: 3px solid var(--main-color);
+    padding: 30px 50px;
+    border-radius: 4rem;
+    box-shadow: 0 0 10px var(--main-color);
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+    margin-bottom: 3rem;
+}
+.project-img{
+    border-radius: 2rem;
+    margin-bottom: 20px;
+    width: 70%;
+    height: 70%;
+}
+.project-title{
+    margin: 1rem;
+    text-align: center;
+    font-size: 4rem;
+    font-weight: 700;
+}
+.project-detail-conatiner {
+    display: grid;
+    gap: 50px 100px;
+    grid-template-columns: auto auto;
+    padding: 10px;
+    align-items: center;
+}
+.project-detail-conatiner div{
+    align-items: center;
+}
+.btn-project{
+    display: inline-block;
+    padding: 1rem 2.8rem;
+    background: var(--main-color);
+    box-shadow: 0 0 25px var(--main-color);
+    border-radius: 4rem;
     font-size: 1.6rem;
+    color: white;
+    border: 2px solid transparent;
+    letter-spacing: 0.1rem;
     font-weight: 600;
-    max-height: 100px;
-    line-height: 1.7;
-    margin: auto;
-    color: var(--primary-background-color);
+    transition: 0.3s ease-in-out;
+    cursor: pointer;
+}
+.btn-project:hover{
+    transform: scale(1.05);
+    box-shadow: 0 0 50px var(--main-color);
+}
+.btn-group-project{
+    align-items: center;
+    gap: 1.5rem;
+    text-align: center;
+}
+.btn-group-project a:nth-of-type(2){
+    background-color: var(--primary-background-color);
+    color: var(--main-color);
+    border: 2px solid var(--main-color);
+    box-shadow: 0 0 25px transparent;
+}
+.btn-group-project a:nth-of-type(2):hover{
+    box-shadow: 0 0 25px var(--main-color);
+    background-color: var(--main-color);
+    color: white;
 }
 /* Contact */
 .contact{
     background-color: var(--primary-background-color);
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    height: 70vh;
+}
+.contact-info{
+    display: flex;
+    justify-content: center;
+    border-radius: 2rem;
+    border: 0.1rem solid var(--main-color);
+    background-color: var(--primary-background-color);
+    margin: 2rem auto;
+    padding: 0.5rem;
 }
 .contact h2{
     margin-bottom: 3rem;
     color: var(--text-color);
 }
-.contact form{
+.contact-info-container{
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 3rem;
-    margin: 5rem auto;
-    text-align: center;
+    gap: 0.5rem;
+    margin: 1rem;
 }
-.contact form .input-box{
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
+.contact-info-container p{
+    font-size: 2rem;
 }
-.contact form .input-box input,
-.contact form textarea {
-    width: 100%;
-    padding: 2.5rem;
-    font-size: 1.8rem;
+.contact-info-container p a{
     color: var(--text-color);
-    background: var(--primary-background-color);
-    border-radius: 2rem;
-    border: 2px solid var(--main-color);
-    margin: 1.5rem 0;
-    resize: none;
+    text-decoration: none;
 }
-.contact form .btn{
-    margin-top: 2rem;
+.contact-icon{
+    cursor: default;
+    height: 7rem;
 }
 
-/* Testimonals */
-.projects{
-    background-color: var(--secondary-background-color);
-    padding: 100px 0;
-}
 
 /* Footer */
 .footer{
@@ -515,6 +621,59 @@ span {
     border-bottom: 3px solid var(--main-color);
 }
 
+/* ham menu */
+.ham-menu {
+    display: none;
+  }
+  
+  .ham-menu {
+    height: 50px;
+    width: 50px;
+    margin-left: auto;
+    position: relative;
+  }
+  
+  .ham-menu span {
+    width: 100%;
+    height: 5px;
+    background: var(--main-color);
+    border-radius: 25px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    transition: 0.3s ease;
+  }
+  
+  .ham-menu span:nth-child(1) {
+    top: 25%;
+  }
+  
+  .ham-menu span:nth-child(2) {
+    top: 75%;
+  }
+  
+  .ham-menu.active span:nth-child(2) {
+    top: 50%;
+    transform: translate(-50%,-50%) rotate(45deg); 
+  }
+  
+  .ham-menu.active span:nth-child(3) {
+      opacity: 0;
+  }
+  
+  .ham-menu.active span:nth-child(1) {
+    top: 50%;
+    transform: translate(-50%,-50%) rotate(-45deg); 
+  }
+.off-screen-menu.active {
+    right: 0;
+  }
+
+.off-screen-menu {
+    display: none;
+}
+
 /* Responsive Styles */
 @media screen and (max-width: 1285px){
     html{
@@ -560,9 +719,51 @@ span {
 
 
 @media screen and (max-width: 895px){
-    #menu-icon{
-        display:block;
-    }
+    .ham-menu {
+        display: block;
+        height: 50px;
+        width: 50px;
+        margin-left: auto;
+        position: relative;
+        z-index: 1000;
+      }
+
+    .off-screen-menu {
+        height: 100vh;
+        width: 100%;
+        max-width: 300px;
+        position: fixed;
+        top: 0;
+        right: -450px;
+        background: var(--primary-background-color);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        transition: .3s ease;
+        z-index: 10;
+      }
+
+      .off-screen-menu ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+        flex-direction: row;
+      }
+
+      .off-screen-menu ul li {
+        display: block;
+        margin-bottom: 30px;
+        font-size: 2.6rem;
+        text-decoration: none;
+      }
+    
+      .off-screen-menu ul li a{
+        color: var(--text-color);
+        text-decoration: none;
+      }
+      
     .navbar{
         position: absolute;
         top: 100%;
@@ -584,6 +785,7 @@ span {
         font-size: 2rem;
         margin: 3rem 0;
         color: var(--text-color);
+        flex-direction: row;
     }
     .home{
         flex-direction: column-reverse;
@@ -602,5 +804,11 @@ span {
     }
     .home-img img{
         width: 56vw;
+    }
+    .experience h2{
+        margin-bottom: 3rem;
+    }
+    .services-container{
+        grid-template-columns: repeat(1,1fr);
     }
 }
