--- a/style.css
+++ b/style.css
@@ -811,4 +811,53 @@ article .icon {
     .services-container{
         grid-template-columns: repeat(1,1fr);
     }
+    .contact {
+        height: auto;
+        padding: 1rem;
+    }
+    .contact-info {
+        flex-direction: column;
+        margin: 1rem;
+    }
+    .contact-info-container {
+        flex-direction: column;
+        align-items: center;
+    }
+    .contact-info-container p {
+        font-size: 1.5rem;
+    }
+    .contact-icon {
+        height: 5rem;
+    }
+    .projects {
+        padding: 50px 0;
+    }
+
+    .project-content {
+        padding: 20px;
+        margin-bottom: 2rem;
+    }
+
+    .project-img {
+        width: 100%;
+        height: auto;
+    }
+
+    .project-title {
+        font-size: 2.5rem;
+    }
+
+    .project-detail-container {
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+
+    .btn-project {
+        padding: 0.8rem 2rem;
+        font-size: 1.4rem;
+    }
+
+    .btn-group-project {
+        gap: 1rem;
+    }
 }
